--- a/styles/small.css
+++ b/styles/small.css
@@ -1,176 +1,119 @@
-* {
+html {
+    scroll-behavior: smooth;
+}
+
+body {
     margin: 0;
-    padding: 0;
-    font-family: Segoe UI;
+    font-family: Arial, sans-serif;
 }
 
-.nav-bar{
-    height: 70px;
-    background: #262626;
+header {
+    position: sticky; /* Make navbar sticky */
+    top: 0; /* Stick to the top */
+    z-index: 1000; /* Ensure it stays above other content */
+    padding: 10px 20px;
+    background-color: white;
 }
 
-.brand{
-    float: left;
-    position: absolute;
-    padding-left: 20px;
-    line-height: 70px;
-    font-size: 1.5em;
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.brand a{
-    text-decoration: none;
-    color: white;
+.logo img {
+    height: 50px; /* Adjust size as needed */
 }
 
-.nav-container{
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-nav{
-    float: right;
-}
-
-nav ul{
+.nav-links {
     list-style: none;
 }
 
-nav ul li{
-    float: left;
-    position: relative;
+.nav-links li {
+    display: inline-block;
+    margin-left: 20px;
 }
 
-nav ul li a{
-    display: block;
-    padding: 0 20px;
-    line-height: 70px;
-    background: #262626;
+.nav-links a {
+    color: black;
     text-decoration: none;
-    color: #fff;
+    font-size: 18px; /* Adjust size as needed */
 }
 
-nav ul li a:hover{
-    background: #2ab1ce;
-    color: #fff;
-}
-
-nav ul li a:not(:only-child):after{
-    content: '▼';
-    padding-left: 5px;
-}
-
-nav ul li ul li {
-    min-width: 190px;
-}
-
-nav ul li ul li a{
-    padding: 15px;
-    line-height: 20px;
-}
-
-.nav-dropdown{
-    position: absolute;
+.burger {
     display: none;
-    z-index: 1;
-}
-
-.nav-mobile{
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 70px;
-    width: 70px;
-}
-
-#nav-toggle{
-    position: absolute;
-    left: 18px;
-    top: 22px;
     cursor: pointer;
-    padding: 10px 35px 15px 0px;
 }
 
-#nav-toggle span,
-#nav-toggle span::before,
-#nav-toggle span::after{
-    position: absolute;
-    display: block;
-    content: '';
-    background: #fff;
-    height: 5px;
-    width: 35px;
-    transition: all 300ms ease-in-out;
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 5px;
+    transition: all 0.3s ease;
 }
 
-#nav-toggle span::before{
-    top: -10px;
-}
+/* Responsive */
+@media screen and (max-width: 768px) {
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: white;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+        display: none; /* Added to initially hide the menu */
+    }
 
-#nav-toggle span::after{
-    bottom: -10px;
-}
+    .nav-links.nav-active {
+        display: flex; /* Display the menu when active */
+        transform: translateX(0%);
+    }
 
-#nav-toggle.active span{
-    background-color: transparent;
-}
-
-#nav-toggle.active span::before, #nav-toggle.active span::after{
-    top: 0;
-}
-
-#nav-toggle.active span::before{
-    transform: rotate(45deg);
-}
-
-#nav-toggle.active span::after{
-    transform: rotate(-45deg);
-}
-
-@media only screen and (max-width: 768px) {
-
-    .nav-mobile{
+    .burger {
         display: block;
     }
 
-    nav{
-        width: 100%;
-        padding: 70px 0 15px;
+    .burger.toggle div:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
     }
 
-    nav ul{
-        display: none;
+    .burger.toggle div:nth-child(2) {
+        opacity: 0;
     }
 
-    nav ul li {
-        float: none;
-    }
-
-    nav ul li a{
-        padding: 15px;
-        line-height: 20px;
-        padding-left: 25%;
-    }
-
-
-    nav ul li ul li a{
-        padding-left: 30%;
-    }
-
-    .nav-dropdown{
-        position: static;
+    .burger.toggle div:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
     }
 }
 
-@media screen and (min-width: 799px){
-    .nav-list{
-        display: block !important;
-    }
-}
+/* FOOTER */
 
 footer {
     height: 70px;
-    background: #262626;
-    color: #FFFFFF;
-    text-align: center;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    text-align: center; /* Ensure the text is centered if it wraps */
+    font-size: 16px; /* Adjust font size as needed */
+    margin-top: 20px; /* Optional: adds some space above the footer */
+}
+
+footer p {
+    margin: 0; /* Remove default paragraph margins */
+}
+
+footer a, footer a:visited {
+    color: inherit; /* Inherits the color from the parent element */
+    text-decoration: none; /* Removes underline from links */
+}
+
+footer a:hover {
+    text-shadow:0px 0px 1px white;
 }
